Add video. Add styles for body, header and it's components

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Excursion Welcome Page</title>
         <link rel="stylesheet" href="resources/css/style.css">
     </head>
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
             <p>
-                <a href="#">Download Excursion (Coming soon)!</a>
+                <a href="#">Download Excursion (Coming soon!)</a>
             </p>
         </header>
+        <main>
+            <video loop autoplay muted>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+                Video not supported
+            </video>
+        </main>
     </body>
 </html>
