--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 <source src="resources/videos/excursion.mp4" type="video/mp4">
                 Video not supported
             </video>
+            <h2>Your personal travel guide</h2>
+            <p class="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <figure>
+                <img src="resources/images/camp.webp" alt="">
+            </figure>
         </main>
     </body>
 </html>
