--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
             <figure>
                 <img src="resources/images/camp.webp" alt="">
             </figure>
+            <figure>
+                <img src="resources/images/phone.webp" alt="">
+                <h2>Coming Soon for iPhone and Android</h2>
+                <p>
+                    <a href="#">Download Excursion (Coming soon!)</a>
+                </p>
+            </figure>
         </main>
+        <footer>
+            <p>© Excursion</p>
+        </footer>
     </body>
 </html>
